--- a/package.json
+++ b/package.json
@@ -1,17 +1,34 @@
 {
   "name": "dev-bitrielswap-core",
-  "version": "1.0.0",
-  "description": "",
+  "version": "1.0.1",
+  "description": "Core smart contract for Bitriel",
+  "license": "BUSL-1.1",
+  "author": "hangleang",
   "main": "truffle-config.js",
   "directories": {
     "test": "test"
   },
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+  "keywords": [
+    "bitrielswap",
+    "dex",
+    "core"
+  ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/hangleang/dev-bitrielswap-core.git"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "files": [
+    "contracts/interfaces",
+    "contracts/libraries",
+    "contracts/BitrielFactory.sol",
+    "contracts/BitrielPool.sol",
+    "build/contracts/BitrielFactory.json",
+    "build/contracts/BitrielPool.json",
+    "build/contracts/I*.json"
+  ],
+  "engines": {
+    "node": ">=10"
+  },
   "dependencies": {
     "@openzeppelin/contracts": "^3.4.1-solc-0.7-2",
     "@truffle/hdwallet-provider": "^1.4.1",
@@ -20,5 +37,9 @@
   "devDependencies": {
     "truffle-contract-size": "^2.0.1",
     "truffle-plugin-verify": "^0.5.10"
+  },
+  "scripts": {
+    "compile": "truffle compile",
+    "test": "truffle test"
   }
 }
